--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
   "devDependencies": {
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0"
+  },
+  "overrides": {
+    "simple-swizzle": "0.2.4"
   }
 }
